# open-cli-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
composio_cli_agent/: main.py
composio_cli_agent/agent/: composio_agent.py
composio_cli_agent/cli/: commands.py  interactive.py
composio_cli_agent/utils/: banner.py  config.py
